cập nhật view info

--- a/ProjectDiamondShop/Views/Introduce/Asscher.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Asscher.cshtml
@@ -234,7 +234,7 @@
         </div>
 
         <div class="spacer"></div>
-        <h2 class="text-center">Cushion Diamond Story</h2>
+        <h2 class="text-center">Asscher Diamond Story</h2>
 
         <div class="container center">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -291,26 +291,22 @@
         <div class="container center ">
             <div class="row ">
                 <p class="decription">
-                    The cushion cut diamond, gaining immense popularity over recent years, characterized by its soft square or rectangular shape with rounded edges, reminiscent of a pillow.
-                    Understanding the nuances between standard and modified cushion cuts, as well as their distinct appearances, is crucial for an informed purchase.
-                    When shopping for a cushion cut diamond, a general guideline is to stick with a depth and table under 70%.
-                    Cushion cuts also retain color more than other shapes, so look for an H color or better when the diamond is set in platinum, white gold, or silver.
-                    A one carat cushion cut costs $2,500 based of our quality recommendation.
-                    We’ll discuss all the nuances of cushion cut diamonds and how to navigate the 4 Cs to find the perfect balance of quality and value.
+                    The Asscher cut diamond is a distinctive choice, characterized by its square shape with deep, layered facets.
+                    While it shares some similarities with the emerald cut, its unique octagonal design sets it apart.
+                    There are two primary variations: the standard Asscher and the Royal Asscher.
+                    Asscher cuts tend to reveal imperfections more than other shapes, so you may opt for a higher clarity grade to ensure your diamond is eye-clean.
+                    Since the majority of the rough stone is maintained in the cutting process, the Asscher cut is generally less expensive than other fancy-shaped diamonds.
+                    A one carat asscher cut will cost you $3,800 if you follow our guidelines.
+                    Below we discuss everything you need to find yourself the perfect asscher cut diamond.
                 </p>
-                <h1>What is a Cushion Cut Diamond?</h1>
+                <h1>What is an Asscher Cut Diamond?</h1>
                 <p class="decription">
-                    A cushion cut diamond is a combination of a more modern and round brilliant cut pattern diamond with a classic, old mine facet pattern diamond cut.
-                    This type of diamond typically has a soft square or even rectangular shape, all with curved edges.
-                    Simply put, a cushion cut diamond combines a square cut with rounded corners, giving it an appearance similar to a pillow.
-                    This is where the “cushion cut” name comes from.
-                    Here’s an example of a stunning cushion cut from Blue Nile’s collection.
-                    Cushion cut diamonds are often purchased for engagement rings.
-                    They’re also commonly used in some fashion pieces.
-                    The price of a cushion cut diamond is typically significantly less than the cost of a round brilliant diamond.
-                    However, due to increasing popularity of cushion cut diamond rings, these prices may vary and rise significantly.
+                    <b>Unique Features of Asscher Diamonds</b>
+                    The straight-edged facets of the asscher diamond (like <a href="https://www.jamesallen.com/loose-diamonds/asscher-cut/1.01-carat-h-color-vvs2-clarity-sku-11345403?a_aid=dmnd1357&amp;data1=1665" data-wpel-link="advanced" target="_blank" rel="nofollow noopener external sponsored" title="" class="external-link">this gorgeous 1ct from James Allen</a>) give it a unique, clean look.
+                    Sometimes referred to as a “square emerald”, both shapes carry a signature point of difference to brilliant cuts, with their features reminiscent of the Art Deco era.
+                    Asscher diamonds usually have 58 facets, the same as a round brilliant. The arrangement of these facets however gives its uniquely vintage appearance, and a “hall of mirrors” look.
                 </p>
-                <img src="~/Image/IntroImage/cushion2.png" alt="Destination 4" style="width: 50%;margin:auto" />
+                <img src="~/Image/Introlmage/cushion2.png" alt="Destination 4" style="width: 50%;margin:auto" />
                 <h2 class="wp-block-heading">Key Features of a Cushion Cut Diamond</h2>
                 <p class="decription">
                     Here are some of the distinctive features that you’ll notice from a cushion cut diamond.
@@ -322,7 +318,7 @@
                     <li>Vintage, antique look and feel</li>
                     <li>Numerous style choices (square vs. rectangular, standard vs. modified, “chunky” vs. “crushed ice”)</li>
                 </ul>
-                <img src="~/Image/IntroImage/cushion.png" alt="Destination 4" style="width: 50%;margin:auto" />
+                <img src="Diamond_Img/cushion.png" alt="Destination 4" style="width: 50%;margin:auto" />
                 <h2 class="wp-block-heading" id="Why-Are-Round-Diamond-Engagement-Rings-So-Popular?">How to Choose a Cushion Cut Diamond</h2>
                 <p class="decription">
                     Looking for a cushion cut? Below, I’ve covered the key factors to look for when buying or comparing cushion cut diamonds, from color to clarity.
@@ -345,7 +341,7 @@
                     Of course, you’ll only know what kind of cushion look you’ll be buying if you can see a picture of the diamond in question – so it’s already a given that you’d be able to inspect the diamond’s clarity as well.
                     Therefore, like always, shoot for the lowest clarity you can find that’s still eye-clean.
                 </p>
-                <img src="~/Image/IntroImage/cushion1.png" alt="Destination 4" style="width: 50%;margin:auto" />
+                <img src="~/Image/Introlmage/cushion1.png" alt="Destination 4" style="width: 50%;margin:auto" />
             </div>
         </div>
         <footer>
