--- a/ProjectDiamondShop/Views/Introduce/Baguette.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Baguette.cshtml
@@ -234,7 +234,7 @@
         </div>
 
         <div class="spacer"></div>
-        <h2 class="text-center">Cushion Diamond Story</h2>
+        <h2 class="text-center">Baguette Diamond Story</h2>
 
         <div class="container center">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -291,61 +291,79 @@
         <div class="container center ">
             <div class="row ">
                 <p class="decription">
-                    The cushion cut diamond, gaining immense popularity over recent years, characterized by its soft square or rectangular shape with rounded edges, reminiscent of a pillow.
-                    Understanding the nuances between standard and modified cushion cuts, as well as their distinct appearances, is crucial for an informed purchase.
-                    When shopping for a cushion cut diamond, a general guideline is to stick with a depth and table under 70%.
-                    Cushion cuts also retain color more than other shapes, so look for an H color or better when the diamond is set in platinum, white gold, or silver.
-                    A one carat cushion cut costs $2,500 based of our quality recommendation.
-                    We’ll discuss all the nuances of cushion cut diamonds and how to navigate the 4 Cs to find the perfect balance of quality and value.
+                    A Baguette diamond is a thin, elongated, rectangular-shaped diamond.
+                    Baguettes can be almost square in shape, but are more commonly long and thin, often around 5:1 in length to width.
+                    Baguette diamonds can have straight edges in a perfect rectangle, or tapered edges that angle in.
+                    These are referred to as “straight” or “tapered” baguettes.
+                    The corners are perfectly square, which is the biggest difference between baguettes and similar cuts, like the emerald cut.
+                    Baguettes have 14 facets, much less than traditional diamond cuts, which will usually have more than 50.
+                    They are usually small, and thus often used as side stones for engagement rings, or for eternity rings or wedding rings.
+                    <img src="~/Image/Introlmage/baguettes.png" alt="Destination 4" style="width: 50%;margin-left:240px;" />
                 </p>
-                <h1>What is a Cushion Cut Diamond?</h1>
-                <p class="decription">
-                    A cushion cut diamond is a combination of a more modern and round brilliant cut pattern diamond with a classic, old mine facet pattern diamond cut.
-                    This type of diamond typically has a soft square or even rectangular shape, all with curved edges.
-                    Simply put, a cushion cut diamond combines a square cut with rounded corners, giving it an appearance similar to a pillow.
-                    This is where the “cushion cut” name comes from.
-                    Here’s an example of a stunning cushion cut from Blue Nile’s collection.
-                    Cushion cut diamonds are often purchased for engagement rings.
-                    They’re also commonly used in some fashion pieces.
-                    The price of a cushion cut diamond is typically significantly less than the cost of a round brilliant diamond.
-                    However, due to increasing popularity of cushion cut diamond rings, these prices may vary and rise significantly.
-                </p>
-                <img src="~/Image/IntroImage/cushion2.png" alt="Destination 4" style="width: 50%;margin:auto" />
-                <h2 class="wp-block-heading">Key Features of a Cushion Cut Diamond</h2>
-                <p class="decription">
-                    Here are some of the distinctive features that you’ll notice from a cushion cut diamond.
-                </p>
-                <ul class="custom-list">
-                    <li>Square or rectangular shape</li>
-                    <li>Rounded edges</li>
-                    <li>Brilliant cut style (similar to round brilliant and princess cut diamonds)</li>
-                    <li>Vintage, antique look and feel</li>
-                    <li>Numerous style choices (square vs. rectangular, standard vs. modified, “chunky” vs. “crushed ice”)</li>
-                </ul>
-                <img src="~/Image/IntroImage/cushion.png" alt="Destination 4" style="width: 50%;margin:auto" />
-                <h2 class="wp-block-heading" id="Why-Are-Round-Diamond-Engagement-Rings-So-Popular?">How to Choose a Cushion Cut Diamond</h2>
-                <p class="decription">
-                    Looking for a cushion cut? Below, I’ve covered the key factors to look for when buying or comparing cushion cut diamonds, from color to clarity.
-                </p>
-                <h3 class="wp-block-heading">Cushion Diamond Color</h3>
+
+                <h2 class="wp-block-heading" id="h-what-are-baguette-diamonds">What Are Baguette Diamonds?</h2>
                 <p>
-                    Cushion cuts are one of the worst shapes when it comes to retaining <a href="https://www.diamonds.pro/education/color/" data-wpel-link="internal">diamond color</a>
-                    (or one of the best, if you’re a manufacturer of fancy color diamonds).Cushion cuts are one of the worst shapes when it comes to retaining diamond color (or one of the best, if you’re a manufacturer of fancy color diamonds).
-                    Cushions and radiants are the two most common diamond shapes in the fancy color diamond market. These shapes are on the opposite end of the spectrum from rounds, which are the best at masking their color.
-                    For this reason, I recommend my readers sticking with H or better when buying a cushion cut unless it will be set in yellow or rose gold (in which case, you can go down to J or K).
-                    <a href="https://www.diamonds.pro/education/h-color-diamonds/" data-wpel-link="internal">H color diamond</a> is a good value option. It’s also one of the more popular choices thanks to its balance in price when compared to the natural diamond color. You’ll notice a significant price jump between each color grade, with H falling somewhere in the middle.
-                    Although H diamonds aren’t completely colorless, they are “near colorless” and only have a very slight yellow tint. Almost no one will notice this difference, especially if the diamond is set in rose or yellow gold.
+                    Baguettes are part of the step cut family, which also includes emerald and asscher cuts.
+                    One of the distinguishing features of step cut diamonds is the straight, clearly-defined facets.
+                    This gives diamonds like baguettes a very different appearance to round cut diamonds, with less sparkle and brilliance.
                 </p>
-                <h3 class="wp-block-heading">Cushion Diamond Clarity</h3>
+                <p>While almost all baguettes are step cuts, it is possible to get hybrid brilliant cut baguettes. These have more facets and as a result, have much more dazzling brilliance, as you can see from <a href="https://www.bluenile.com/engagement-rings/design-your-own-ring/tapered-brilliant-baguette-diamond-engagement-ring-in-platinum-1-2-ct-tw-item-194281?a_aid=dmnd1357&amp;data1=42026" data-wpel-link="advanced" target="_blank" rel="nofollow noopener external sponsored" title="" class="external-link">this tapered brilliant baguette three-stone ring on Blue Nile</a>.&nbsp;</p>
+                <p>A ring set with brilliant-cut baguettes will come at a much higher price, due not only to the baguette itself, but the higher quality center stone needed to draw attention.</p>
+                <h2 class="wp-block-heading" id="h-baguette-vs-emerald-cut-diamond">Baguette vs. Emerald Cut Diamond</h2>
+                <p>The difference between baguette and emerald cut diamonds is the number of facets and a small difference in shape.</p>
+                <p>Baguette cuts have 14 facets, while an Emerald cut has 58 facets.</p>
                 <p>
-                    Regarding <a href="https://www.diamonds.pro/education/clarity/" data-wpel-link="internal">diamond clarity</a>, a cushion cut can be a bit tricky.
-                    Firstly, it’s important to note whether you’re looking to buy a crushed-ice cushion or an “antique” cushion.
-                    The reason is simply that the crushed-ice look, in any shape diamond, is generally a very good hider of inclusions.
-                    Additionally, if you’re looking to buy a marquise or pear shape diamond, it’s always best if the inclusions are in the corners as they’ll be very heavily masked by the crushed-ice that’s typically found in the corners of these shapes.
-                    Of course, you’ll only know what kind of cushion look you’ll be buying if you can see a picture of the diamond in question – so it’s already a given that you’d be able to inspect the diamond’s clarity as well.
-                    Therefore, like always, shoot for the lowest clarity you can find that’s still eye-clean.
+                    While both cuts can have a similar elongated, rectangular shape, baguette cuts have square corners, while emerald cuts have diagonal corners.
+                    Baguettes are longer and narrower than emerald cuts.
                 </p>
-                <img src="~/Image/IntroImage/cushion1.png" alt="Destination 4" style="width: 50%;margin:auto" />
+                <p>Typically baguette cuts will be sold in lower carat weights than emerald cuts, as they are not often used as center stones, like the emerald or <a href="https://www.diamonds.pro/education/asscher-cut/" data-wpel-link="internal">asscher cut</a>. Jewelry utilizing smaller diamonds like mellee or baguettes have surged in popularity lately. “Most luxury brands seem to be confident that sales [of diamond bands] will be good, and have already placed orders for mellee diamonds for the coming six months” as&nbsp;<a href="https://rapaport.com/analysis/in-shaky-market-small-diamonds-are-winning/" target="_blank" rel="noreferrer noopener external" data-wpel-link="external">reported by Rapaport</a> referring to smaller diamond sales.</p>
+                <p>
+                    The lower number of facets on a baguette means they provide much less shine than an emerald, and imperfections on the diamond are easier to notice.
+                    This is why they’re preferred as smaller, “accent” diamonds, used to complement a center stone of <a href="https://www.diamonds.pro/education/shapes/" data-wpel-link="internal">any shape</a>.
+                </p>
+                <h2 class="wp-block-heading" id="h-baguette-engagement-ring-settings">Baguette Engagement Ring Settings</h2>
+                <p>
+                    Baguette diamonds make great choices for side stones in a <a href="https://www.diamonds.pro/education/three-stone-diamond-rings/" data-wpel-link="internal">three-stone setting</a>.
+                    The perfect stone and setting will accentuate the center stone and produce a beautiful engagement ring.
+                </p>
+                <p>
+                    Most rings that feature baguette diamonds have them set horizontally, one baguette on each side drawing attention to a center stone.
+                    It’s also common for tapered baguettes used in this style of ring, with the narrow end pointing away from the center stone.
+                </p>
+                <h3 class="wp-block-heading" id="h-three-stone-baguette-rings">Three-Stone Baguette Rings</h3>
+                <p>
+                    A tapered baguette diamond is a beautiful way to add extra shine to a ring without taking away from the center stone. <br />
+                    <br />One of the most popular styles is a three-stone setting with tapered baguettes next to an emerald cut.
+                    Rings such as <a href="https://www.bluenile.com/engagement-rings/design-your-own-ring/tapered-baguette-diamond-engagement-ring-in-14k-rose-gold-1-6-ct-tw-item-192868?a_aid=dmnd1357&amp;data1=42026" data-wpel-link="advanced" target="_blank" rel="nofollow noopener external sponsored" title="" class="external-link">this</a>
+                    feature perfectly matched step cut diamonds in the emerald and baguette cuts that complement each other beautifully.
+                    <img src="~/Image/Introlmage/Baguette1.png" alt="Destination 4" style="width: 50%;margin-left:240px;" />
+                </p>
+                <h3 class="wp-block-heading" id="h-channel-set-baguette-rings">Channel Set Baguette Rings</h3>
+                <p>
+                    Baguette diamonds make perfect accents for channel set rings.
+                    This setting, with small diamonds set into the metal leading up to the center stone, is a clean and sophisticated look.
+                    As an example, see this channel set ring from James Allen with straight baguettes set end-to-end halfway along the band, which gives a brilliant overall shine.
+                    <img src="~/Image/Introlmage/Baguette2.png" alt="Destination 4" style="width: 50%;margin-left:240px;" />
+                </p>
+                <h3 class="wp-block-heading" id="h-vintage-baguette-rings">Vintage Baguette Rings</h3>
+                <p>
+                    Baguettes are great additions to extravagant vintage settings.
+                    For rings with a lot of round diamonds, baguettes add variety and can take the ring to a new level.
+                    See this hexagon baguette ring from Blue Nile, with a collection of straight baguettes surrounding the center diamond.
+                    <img src="~/Image/Introlmage/Baguette3.png" alt="Destination 4" style="width: 50%;margin-left:240px;" />
+                </p>
+                <p>
+                    Even more extravagant is this stunning baguette halo ring from Blue Nile.
+                    Baguettes are set around the center stone, punctuated by round accent diamonds, for a show-stopping look.
+                </p>
+                <h2 class="wp-block-heading" id="h-are-baguette-diamonds-expensive">Are Baguette Diamonds Expensive</h2>
+                <p>
+                    Baguette diamonds are often less expensive than other diamond cuts.
+                    The price per carat for a baguette diamond is likely to be less than, say, a round brilliant, or an emerald cut, as lower-quality cuts are used.
+                    Baguettes are graded on the 4 C’s, as with any diamond. So prices can vary depending on a stone’s grade.
+                    It is possible to get high-grade baguette diamonds, in which case the price per carat will be similar to more common cuts, if not more due to the increased scarcity of high-quality baguettes.
+                    However, baguette diamonds are almost always a lower carat weight, so individually they are not as expensive as other diamonds.
+                </p>
             </div>
         </div>
         <footer>
