--- a/ProjectDiamondShop/Views/Introduce/Emerald.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Emerald.cshtml
@@ -234,7 +234,7 @@
         </div>
 
         <div class="spacer"></div>
-        <h2 class="text-center">Cushion Diamond Story</h2>
+        <h2 class="text-center">Emerald Diamond Story</h2>
 
         <div class="container center">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -291,61 +291,76 @@
         <div class="container center ">
             <div class="row ">
                 <p class="decription">
-                    The cushion cut diamond, gaining immense popularity over recent years, characterized by its soft square or rectangular shape with rounded edges, reminiscent of a pillow.
-                    Understanding the nuances between standard and modified cushion cuts, as well as their distinct appearances, is crucial for an informed purchase.
-                    When shopping for a cushion cut diamond, a general guideline is to stick with a depth and table under 70%.
-                    Cushion cuts also retain color more than other shapes, so look for an H color or better when the diamond is set in platinum, white gold, or silver.
-                    A one carat cushion cut costs $2,500 based of our quality recommendation.
-                    We’ll discuss all the nuances of cushion cut diamonds and how to navigate the 4 Cs to find the perfect balance of quality and value.
+                    Emerald cut diamonds typically have of 57 facets and are distinguished by their elongated, rectangular shape and unique step cuts, creating a ‘hall of mirrors effect.
+                    While generally not as brilliant they usually appear larger than other shapes of the same carat weight.
+                    Their large table can make even tiny flaws stand out, so buyers should be wary of visible inclusions.
+                    Emerald cut diamonds tend to show more color than other shapes.
+                    Emerald shaped diamonds are not graded on cut.
+                    In general we recommend looking for a depth of below 74% and a length to width ration of 1.30 to 1.60 which will provide a beautiful cut.
+                    In this article we discuss our emerald cut recommendations to ensure you end up with a stunning emerald cut at a great price.
+                    For example, you can get a great one carat emeral cut for $3,300.
                 </p>
-                <h1>What is a Cushion Cut Diamond?</h1>
-                <p class="decription">
-                    A cushion cut diamond is a combination of a more modern and round brilliant cut pattern diamond with a classic, old mine facet pattern diamond cut.
-                    This type of diamond typically has a soft square or even rectangular shape, all with curved edges.
-                    Simply put, a cushion cut diamond combines a square cut with rounded corners, giving it an appearance similar to a pillow.
-                    This is where the “cushion cut” name comes from.
-                    Here’s an example of a stunning cushion cut from Blue Nile’s collection.
-                    Cushion cut diamonds are often purchased for engagement rings.
-                    They’re also commonly used in some fashion pieces.
-                    The price of a cushion cut diamond is typically significantly less than the cost of a round brilliant diamond.
-                    However, due to increasing popularity of cushion cut diamond rings, these prices may vary and rise significantly.
+                <h2 class="wp-block-heading" id="What-is-an-Emerald-Cut-Diamond">What Is An Emerald Cut Diamond</h2>
+                <p>
+                    The emerald cut diamond flaunts an elongated, rectangular shape and chiseled step cuts, with straight linear facets—usually arranged parallelly down the stone.
+                    To add stability and prevent fractures, the corners of an emerald cut diamond are usually cropped.
                 </p>
-                <img src="~/Image/IntroImage/cushion2.png" alt="Destination 4" style="width: 50%;margin:auto" />
-                <h2 class="wp-block-heading">Key Features of a Cushion Cut Diamond</h2>
-                <p class="decription">
-                    Here are some of the distinctive features that you’ll notice from a cushion cut diamond.
+                <p>
+                    The emerald cut diamond provides for deep clarity and a large surface table.
+                    Through its long step cuts, the diamond offers abundant reflections both of white and colored light.
+                    Emerald cuts are more prominent in rectangles but are available in squares as well.
+                </p>
+                <p>
+                    A popular choice for those wanting a larger stone without a high price point, an emerald cut diamond usually appears bigger than other shaped diamonds in the same carat weight.
+                    Emerald cuts are also a top choice for celebrities.
+                    As <a href="https://www.hellomagazine.com/brides/20210217107101/paris-hilton-has-announced-that-she-is-engaged/" data-wpel-link="external" target="_blank" rel="external noopener">Hello Magazine</a>, a top magazine covering celebrities, reports celebs like Paris Hilton make emerald cuts their top choice.
+                </p>
+                <h2 class="wp-block-heading" id="Emerald-Cut-Diamond---Length-to-Width-Ratio">Emerald Cut Diamond – Length to Width Ratio</h2>
+                <p>
+                    A diamond’s length to width ratio tells how squared or elongated its shape is. The ratio is calculated by dividing the length of the diamond by the width.
+                    For example, if a diamond’s length is 6mm and its width is 4mm, the length to width ratio is 1.50 – rectangular shape.
+                    On the opposite side, a length to width ratio close to 1 looks like a square, because the length and width of the diamond are similar.
+                    The ideal shape for an emerald cut diamond is rectangular, with the ratio classically ranging from 1.30 to 1.60.
+                    Most people choose a ration close to 1.50, however, you may have your own preference for a slightly wider or longer shaped diamond.
+                    Review a handful of emerald cut diamonds to determine which length to width ratio you prefer.
+                    Consider also how the diamond will look in your desired setting.
+                    If you prefer a more square shape—instead of a rectangular design—you may wish to consider an asscher cut diamond, an exquisite alternative to the emerald cut.
+                    <img src="~/Image/Introlmage/emerald.png" alt="Destination 4" style="width: 100%;margin:auto;" />
+                </p>
+                <h2 class="wp-block-heading">Comparing Size and Carat Weight</h2>
+                <p>
+                    Take a look at the size differences between different carat weigh of an emerald cut.
+                    Keep in mind that those are average measurements as every emerald cut diamond is slightly different (in measurements and L:W ratio).
+                    <img src="~/Image/Introlmage/emerald1.jpg" alt="Destination 4" style="width: 80%;margin:auto;" />
+                </p>
+                <h2 class="wp-block-heading" id="Emerald-Cut-Diamond---Clarity">Emerald Cut Diamond – Clarity</h2>
+                <p>
+                    The <a href="https://www.diamonds.pro/education/diamond-depth-and-table/" data-wpel-link="internal"><strong>table</strong></a> (top surface area) of an emerald cut is like a clear unobstructed window into the center of the stone. Any inclusions found in the middle will be clearly visible. Because both the <b>pavilion</b> (the bottom slanted portion of the diamond) and <b>crown</b> (the upper diamond resting atop the girdle) are comparatively shallow, step cut stones are generally not as bright and never as fiery as brilliant cut stones.
+                    Rather, they accentuate a diamond’s clarity, as even the slightest flaw would be highly visible.
+                </p>
+                <p>In other words, blemishes in an emerald cut diamond will be more noticeable than in a round cut diamond or cushion cut diamond.</p>
+                <p>
+                    The GIA <a href="https://www.diamonds.pro/education/clarity/" data-wpel-link="internal">diamond clarity scale</a> ranges from best (void of inclusions) to worst (easily noticeable inclusions).
+                    Their designations include:
                 </p>
                 <ul class="custom-list">
-                    <li>Square or rectangular shape</li>
-                    <li>Rounded edges</li>
-                    <li>Brilliant cut style (similar to round brilliant and princess cut diamonds)</li>
-                    <li>Vintage, antique look and feel</li>
-                    <li>Numerous style choices (square vs. rectangular, standard vs. modified, “chunky” vs. “crushed ice”)</li>
+                    <li> <b>IF </b>– Internally Flawless</li>
+                    <li> <b>VVS1 </b>– Very Very Small Inclusions 1</li>
+                    <li> <b>VVS2 </b>– Very Very Small Inclusions 2</li>
+                    <li> <b>VS1 </b>– Very Small Inclusions 1</li>
+                    <li> <b>VS2 </b>– Very Small Inclusions 2</li>
+                    <li> <b>SI1 </b>– Small Inclusions 1</li>
+                    <li> <b>SI2 </b>– Small Inclusions 2</li>
+                    <li> <b>I1 </b>– Inclusions 1</li>
+                    <li> <b>I2 </b>– Inclusions 2</li>
                 </ul>
-                <img src="~/Image/IntroImage/cushion.png" alt="Destination 4" style="width: 50%;margin:auto" />
-                <h2 class="wp-block-heading" id="Why-Are-Round-Diamond-Engagement-Rings-So-Popular?">How to Choose a Cushion Cut Diamond</h2>
-                <p class="decription">
-                    Looking for a cushion cut? Below, I’ve covered the key factors to look for when buying or comparing cushion cut diamonds, from color to clarity.
-                </p>
-                <h3 class="wp-block-heading">Cushion Diamond Color</h3>
                 <p>
-                    Cushion cuts are one of the worst shapes when it comes to retaining <a href="https://www.diamonds.pro/education/color/" data-wpel-link="internal">diamond color</a>
-                    (or one of the best, if you’re a manufacturer of fancy color diamonds).Cushion cuts are one of the worst shapes when it comes to retaining diamond color (or one of the best, if you’re a manufacturer of fancy color diamonds).
-                    Cushions and radiants are the two most common diamond shapes in the fancy color diamond market. These shapes are on the opposite end of the spectrum from rounds, which are the best at masking their color.
-                    For this reason, I recommend my readers sticking with H or better when buying a cushion cut unless it will be set in yellow or rose gold (in which case, you can go down to J or K).
-                    <a href="https://www.diamonds.pro/education/h-color-diamonds/" data-wpel-link="internal">H color diamond</a> is a good value option. It’s also one of the more popular choices thanks to its balance in price when compared to the natural diamond color. You’ll notice a significant price jump between each color grade, with H falling somewhere in the middle.
-                    Although H diamonds aren’t completely colorless, they are “near colorless” and only have a very slight yellow tint. Almost no one will notice this difference, especially if the diamond is set in rose or yellow gold.
+                    <b>We recommend a VS2 clarity for the best value</b>.
+                    SI2 and SI1 clarity grades are generally not recommended with step cuts such as asscher cuts and emerald cuts.
+                    Step cuts aren’t cut for their brilliance, so there’s no scattering of light to hide inclusions.
+                    Most importantly, review all possible diamonds carefully to ensure they look clean to the naked eye.
+                    If you’re looking for an SI1 or SI2 emerald cut, for example, you must verify that inclusions are not in the center of the stone.
                 </p>
-                <h3 class="wp-block-heading">Cushion Diamond Clarity</h3>
-                <p>
-                    Regarding <a href="https://www.diamonds.pro/education/clarity/" data-wpel-link="internal">diamond clarity</a>, a cushion cut can be a bit tricky.
-                    Firstly, it’s important to note whether you’re looking to buy a crushed-ice cushion or an “antique” cushion.
-                    The reason is simply that the crushed-ice look, in any shape diamond, is generally a very good hider of inclusions.
-                    Additionally, if you’re looking to buy a marquise or pear shape diamond, it’s always best if the inclusions are in the corners as they’ll be very heavily masked by the crushed-ice that’s typically found in the corners of these shapes.
-                    Of course, you’ll only know what kind of cushion look you’ll be buying if you can see a picture of the diamond in question – so it’s already a given that you’d be able to inspect the diamond’s clarity as well.
-                    Therefore, like always, shoot for the lowest clarity you can find that’s still eye-clean.
-                </p>
-                <img src="~/Image/IntroImage/cushion1.png" alt="Destination 4" style="width: 50%;margin:auto" />
             </div>
         </div>
         <footer>
@@ -362,4 +377,5 @@
     </form>
 </body>
 </html>
+
 
