--- a/ProjectDiamondShop/Views/Introduce/Marquise.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Marquise.cshtml
@@ -234,7 +234,7 @@
         </div>
 
         <div class="spacer"></div>
-        <h2 class="text-center">Cushion Diamond Story</h2>
+        <h2 class="text-center">Marquise Diamond Story</h2>
 
         <div class="container center">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -291,61 +291,69 @@
         <div class="container center ">
             <div class="row ">
                 <p class="decription">
-                    The cushion cut diamond, gaining immense popularity over recent years, characterized by its soft square or rectangular shape with rounded edges, reminiscent of a pillow.
-                    Understanding the nuances between standard and modified cushion cuts, as well as their distinct appearances, is crucial for an informed purchase.
-                    When shopping for a cushion cut diamond, a general guideline is to stick with a depth and table under 70%.
-                    Cushion cuts also retain color more than other shapes, so look for an H color or better when the diamond is set in platinum, white gold, or silver.
-                    A one carat cushion cut costs $2,500 based of our quality recommendation.
-                    We’ll discuss all the nuances of cushion cut diamonds and how to navigate the 4 Cs to find the perfect balance of quality and value.
+                    The marquise cut diamond, with its elongated and pointed ends, offers a distinctive and elegant appearance.
+                    The marquise cut’s unique shape not only maximizes carat weight, making the diamond appear larger, but also flatters the finger with its elongated design.
+                    When selecting a Marquise diamond, it’s essential to ensure symmetrical proportions and be aware of the potential “bow-tie” effect in the center.
+                    The most popular length to width ratios are 1.70-21.5. We recommend looking for a S1 or S2 for the best clarity and value in marquise diamonds.
+                    Marquise diamonds have traditionally been significantly less expensive than round diamonds.
+                    However, the marquise cut has gained some serious traction in the last couple of years and their prices have gone up in relation to other diamond shapes.
+                    A one carat marquise now costs around $4,000, almost as much as round diamonds.
+                    In this article we will discuss everything you need to know about the marquise cut characteristics and how to get the best bang for your buck when purchasing one.
                 </p>
-                <h1>What is a Cushion Cut Diamond?</h1>
+                <h1>The Marquise Diamond History</h1>
                 <p class="decription">
-                    A cushion cut diamond is a combination of a more modern and round brilliant cut pattern diamond with a classic, old mine facet pattern diamond cut.
-                    This type of diamond typically has a soft square or even rectangular shape, all with curved edges.
-                    Simply put, a cushion cut diamond combines a square cut with rounded corners, giving it an appearance similar to a pillow.
-                    This is where the “cushion cut” name comes from.
-                    Here’s an example of a stunning cushion cut from Blue Nile’s collection.
-                    Cushion cut diamonds are often purchased for engagement rings.
-                    They’re also commonly used in some fashion pieces.
-                    The price of a cushion cut diamond is typically significantly less than the cost of a round brilliant diamond.
-                    However, due to increasing popularity of cushion cut diamond rings, these prices may vary and rise significantly.
+                    Marquise diamonds have a long and fascinating history.
+                    In the 18th century, King Louis XV of France requested a diamond be cut to resemble the lips of his mistress, the Marchioness Madame de Pompadour, Jean Antoinette Poisson.
+                    While the narrow design has been refined over time, it maintains similarities to the original.
+                    In the years following the initial cut, the diamond was named marquise, which referred to a rank just below duke.
+                    Prestigious individuals would don marquise diamonds to demonstrate their rank.
+                    Marquise diamonds are also occasionally called Navette, meaning “small ship” in French.
+                    The marquise’s shape is similar to a boat, an elongated eye and an American football.
                 </p>
-                <img src="~/Image/IntroImage/cushion2.png" alt="Destination 4" style="width: 50%;margin:auto" />
-                <h2 class="wp-block-heading">Key Features of a Cushion Cut Diamond</h2>
+
+                <h2 class="wp-block-heading" id="What-is-a-Marquise-Diamond">
+                    <b>What is a Marquise Diamond?</b>
+                </h2>
+
                 <p class="decription">
-                    Here are some of the distinctive features that you’ll notice from a cushion cut diamond.
+                    A marquise diamond boasts 56 facets in a longer shape that ends with a point on each side.
+                    This impressive and distinct appearance makes a marquise diamond a unique choice for those who want something different.
+                    Thanks to the elongated shape, a marquise cut seems larger than other diamonds of the same carat weight and often cause the wearer’s fingers to look thinner.
                 </p>
-                <ul class="custom-list">
-                    <li>Square or rectangular shape</li>
-                    <li>Rounded edges</li>
-                    <li>Brilliant cut style (similar to round brilliant and princess cut diamonds)</li>
-                    <li>Vintage, antique look and feel</li>
-                    <li>Numerous style choices (square vs. rectangular, standard vs. modified, “chunky” vs. “crushed ice”)</li>
-                </ul>
-                <img src="~/Image/IntroImage/cushion.png" alt="Destination 4" style="width: 50%;margin:auto" />
-                <h2 class="wp-block-heading" id="Why-Are-Round-Diamond-Engagement-Rings-So-Popular?">How to Choose a Cushion Cut Diamond</h2>
+                <img src="~/Image/Introlmage/marquise1.png" alt="Destination 4" style="width: 50%;margin:auto" />
+
+                <h2 class="wp-block-heading" id="Why-Are-Round-Diamond-Engagement-Rings-So-Popular?">Marquise Cut Diamond – Length to Width Ratio</h2>
                 <p class="decription">
-                    Looking for a cushion cut? Below, I’ve covered the key factors to look for when buying or comparing cushion cut diamonds, from color to clarity.
+                    When it comes to choosing a length to width ratio for your marquise diamond, remember this decision is primarily based on personal preference.
+                    Above all, you want the diamond to look stunning to the naked eye and match the style of the wearer.
+                    Popular length to width ratios for marquise diamonds range from 1.70-2.15. Length to width ratio can be determined by dividing the length of a diamond by its width.
+                    For instance, if a diamond maintains a length of 5mm and width of 3mm, the length to width ratio is 1.67.
+                    To represent how various marquise diamonds appear—depending on their length to width ratio—we’ve included three examples.
                 </p>
-                <h3 class="wp-block-heading">Cushion Diamond Color</h3>
+                <img src="~/Image/Introlmage/marquise2.png" alt="Destination 4" style="width: 100%;margin:auto" />
                 <p>
-                    Cushion cuts are one of the worst shapes when it comes to retaining <a href="https://www.diamonds.pro/education/color/" data-wpel-link="internal">diamond color</a>
-                    (or one of the best, if you’re a manufacturer of fancy color diamonds).Cushion cuts are one of the worst shapes when it comes to retaining diamond color (or one of the best, if you’re a manufacturer of fancy color diamonds).
-                    Cushions and radiants are the two most common diamond shapes in the fancy color diamond market. These shapes are on the opposite end of the spectrum from rounds, which are the best at masking their color.
-                    For this reason, I recommend my readers sticking with H or better when buying a cushion cut unless it will be set in yellow or rose gold (in which case, you can go down to J or K).
-                    <a href="https://www.diamonds.pro/education/h-color-diamonds/" data-wpel-link="internal">H color diamond</a> is a good value option. It’s also one of the more popular choices thanks to its balance in price when compared to the natural diamond color. You’ll notice a significant price jump between each color grade, with H falling somewhere in the middle.
-                    Although H diamonds aren’t completely colorless, they are “near colorless” and only have a very slight yellow tint. Almost no one will notice this difference, especially if the diamond is set in rose or yellow gold.
+                    The marquise with a ratio of 1.75 is slightly stockier and may offer a bit more durability than those with the higher ratios.
+                    The 1.95 diamond is more slender and maintains ample stability. The diamond with a 2.15 ratio is further elongated and may have slightly less durability than the others.
+                    Overall, no marquise shape is fundamentally better than another. Choose what most appeals to you and ensure the diamond is well cut and well set in the jewelry.
+                    In addition, watch for the marquise’s pointed ends: they should align nearly perfectly with each other.
+                    Symmetry is critical, as even the slightest difference can take away from the stone’s beauty and elegance.
                 </p>
-                <h3 class="wp-block-heading">Cushion Diamond Clarity</h3>
+                <h2 class="wp-block-heading" id="Bowtie-Effect-in-Marquise-Diamonds">Bowtie Effect in Marquise Diamonds</h2>
                 <p>
-                    Regarding <a href="https://www.diamonds.pro/education/clarity/" data-wpel-link="internal">diamond clarity</a>, a cushion cut can be a bit tricky.
-                    Firstly, it’s important to note whether you’re looking to buy a crushed-ice cushion or an “antique” cushion.
-                    The reason is simply that the crushed-ice look, in any shape diamond, is generally a very good hider of inclusions.
-                    Additionally, if you’re looking to buy a marquise or pear shape diamond, it’s always best if the inclusions are in the corners as they’ll be very heavily masked by the crushed-ice that’s typically found in the corners of these shapes.
-                    Of course, you’ll only know what kind of cushion look you’ll be buying if you can see a picture of the diamond in question – so it’s already a given that you’d be able to inspect the diamond’s clarity as well.
-                    Therefore, like always, shoot for the lowest clarity you can find that’s still eye-clean.
+                    Due to their elegant and elongated shape, nearly all marquise diamonds contain a bowtie effect.
+                    The dark space, referred to as the bowtie, stretches across the diamond’s center and can impact the beauty of the stone.
+                    Bowtie severity differs across marquise diamonds.
+                    In some cases, the bowtie is noticeable to the naked eye, while other times it’s nearly invisible.
                 </p>
-                <img src="~/Image/IntroImage/cushion1.png" alt="Destination 4" style="width: 50%;margin:auto" />
+                <p>
+                    Look for a marquise diamond without a dominant bowtie, as this will detract from the magnificence of your stone.
+                    We highly recommend a diamond expert review any marquise before purchase.
+                </p>
+                <p>In the images below, notice the significant difference between a bowtie and non-bowtie diamond.</p>
+                <img src="~/Image/Introlmage/marquise3.png" alt="Destination 4" style="width: 100%;margin:auto" />
+                <h2 class="wp-block-heading">Size and Carat Weight Comparison</h2>
+                <p>Imagining how big certain carat weight is can be difficult. We decided to make it easy for everybody and made this side by side comparison to a US quarter.</p>
+                <img src="~/Image/Introlmage/marquise4.jpg" alt="Destination 4" style="width: 100%;margin:auto" />
             </div>
         </div>
         <footer>
@@ -362,4 +370,5 @@
     </form>
 </body>
 </html>
+
 
