--- a/ProjectDiamondShop/Views/Introduce/Pear.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Pear.cshtml
@@ -184,6 +184,10 @@
             list-style-type: disc;
             margin-left: 20px;
         }
+
+        .container center img {
+            text-align: justify;
+        }
     </style>
 </head>
 
@@ -228,6 +232,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="spacer"></div>
             <h2 class="text-center">Pear Diamond Story</h2>
 
