--- a/ProjectDiamondShop/Views/Introduce/Princess.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Princess.cshtml
@@ -193,7 +193,7 @@
 
 <body>
     <form id="form1" runat="server">
-
+        <div>
         <div class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container ">
                 <div class="navbar-header">
@@ -234,7 +234,7 @@
         </div>
 
         <div class="spacer"></div>
-        <h2 class="text-center">Cushion Diamond Story</h2>
+        <h2 class="text-center">Princess Diamond Story</h2>
 
         <div class="container center">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -249,28 +249,28 @@
                     <div class="item active">
                         <div class="slide-wrapper">
                             <a href="#">
-                                <img src="~/Image/IntroImage/hình.jpg" alt="Destination 1" style="width: 100%;" />
+                                <img src="/Image/IntroImage/hình.jpg" alt="Destination 1" style="width: 100%;">
                             </a>
                         </div>
                     </div>
                     <div class="item">
                         <div class="slide-wrapper">
                             <a href="#">
-                                <img src="~/Image/IntroImage/hinh 3 (1).jpeg" alt="Destination 2" style="width: 100%;" />
+                                <img src="/Image/IntroImage/hinh 3 (1).jpeg" alt="Destination 2" style="width: 100%;">
                             </a>
                         </div>
                     </div>
                     <div class="item">
                         <div class="slide-wrapper">
                             <a href="#">
-                                <img src="/Image/HomePage/BannerSlider/kc3.jpg" alt="Destination 3" style="width: 100%;" />
+                                <img src="/Image/HomePage/BannerSlider/kc3.jpg" alt="Destination 3" style="width: 100%;">
                             </a>
                         </div>
                     </div>
                     <div class="item">
                         <div class="slide-wrapper">
                             <a href="#">
-                                <img src="~/Image/HomePage/BannerSlider/kc4.jpg" alt="Destination 4" style="width: 100%;">
+                                <img src="/Image/HomePage/BannerSlider/kc4.jpg" alt="Destination 4" style="width: 100%;">
                             </a>
                         </div>
                     </div>
@@ -285,67 +285,70 @@
                 </a>
             </div>
         </div>
-
+</div>
 
         <!--Code thêm phần bài viết ở đây-->
         <div class="container center ">
             <div class="row ">
                 <p class="decription">
-                    The cushion cut diamond, gaining immense popularity over recent years, characterized by its soft square or rectangular shape with rounded edges, reminiscent of a pillow.
-                    Understanding the nuances between standard and modified cushion cuts, as well as their distinct appearances, is crucial for an informed purchase.
-                    When shopping for a cushion cut diamond, a general guideline is to stick with a depth and table under 70%.
-                    Cushion cuts also retain color more than other shapes, so look for an H color or better when the diamond is set in platinum, white gold, or silver.
-                    A one carat cushion cut costs $2,500 based of our quality recommendation.
-                    We’ll discuss all the nuances of cushion cut diamonds and how to navigate the 4 Cs to find the perfect balance of quality and value.
+                    The princess cut diamond, characterized by its square shape, is a great modern alternative to the classic round cut.
+                    Offering both fire and brilliance, princess cuts are typically more affordable due to efficient rough diamond utilization.
+                    However, their distinct sharp corners necessitate protective settings.
+                    If you are considering purchasing a princess cut diamond, focus on H-I color and VS2-SI1 clarity to maximize value.
+                    Princess cut diamonds are a bit cheaper than round cuts with a typical price for a 1 carat princess cut being $3,700.
+                    If you follow our recommendations in this article, you will end up with a fantastic princess cut that is also an excellent value.
                 </p>
-                <h1>What is a Cushion Cut Diamond?</h1>
-                <p class="decription">
-                    A cushion cut diamond is a combination of a more modern and round brilliant cut pattern diamond with a classic, old mine facet pattern diamond cut.
-                    This type of diamond typically has a soft square or even rectangular shape, all with curved edges.
-                    Simply put, a cushion cut diamond combines a square cut with rounded corners, giving it an appearance similar to a pillow.
-                    This is where the “cushion cut” name comes from.
-                    Here’s an example of a stunning cushion cut from Blue Nile’s collection.
-                    Cushion cut diamonds are often purchased for engagement rings.
-                    They’re also commonly used in some fashion pieces.
-                    The price of a cushion cut diamond is typically significantly less than the cost of a round brilliant diamond.
-                    However, due to increasing popularity of cushion cut diamond rings, these prices may vary and rise significantly.
-                </p>
-                <img src="~/Image/IntroImage/cushion2.png" alt="Destination 4" style="width: 50%;margin:auto" />
-                <h2 class="wp-block-heading">Key Features of a Cushion Cut Diamond</h2>
-                <p class="decription">
-                    Here are some of the distinctive features that you’ll notice from a cushion cut diamond.
-                </p>
-                <ul class="custom-list">
-                    <li>Square or rectangular shape</li>
-                    <li>Rounded edges</li>
-                    <li>Brilliant cut style (similar to round brilliant and princess cut diamonds)</li>
-                    <li>Vintage, antique look and feel</li>
-                    <li>Numerous style choices (square vs. rectangular, standard vs. modified, “chunky” vs. “crushed ice”)</li>
-                </ul>
-                <img src="~/Image/IntroImage/cushion.png" alt="Destination 4" style="width: 50%;margin:auto" />
-                <h2 class="wp-block-heading" id="Why-Are-Round-Diamond-Engagement-Rings-So-Popular?">How to Choose a Cushion Cut Diamond</h2>
-                <p class="decription">
-                    Looking for a cushion cut? Below, I’ve covered the key factors to look for when buying or comparing cushion cut diamonds, from color to clarity.
-                </p>
-                <h3 class="wp-block-heading">Cushion Diamond Color</h3>
+                <h2 class="wp-block-heading" id="Princess-Diamond-Engagement-Rings---Becoming-More-Popular">Princess Diamond Engagement Rings – Becoming More Popular</h2>
                 <p>
-                    Cushion cuts are one of the worst shapes when it comes to retaining <a href="https://www.diamonds.pro/education/color/" data-wpel-link="internal">diamond color</a>
-                    (or one of the best, if you’re a manufacturer of fancy color diamonds).Cushion cuts are one of the worst shapes when it comes to retaining diamond color (or one of the best, if you’re a manufacturer of fancy color diamonds).
-                    Cushions and radiants are the two most common diamond shapes in the fancy color diamond market. These shapes are on the opposite end of the spectrum from rounds, which are the best at masking their color.
-                    For this reason, I recommend my readers sticking with H or better when buying a cushion cut unless it will be set in yellow or rose gold (in which case, you can go down to J or K).
-                    <a href="https://www.diamonds.pro/education/h-color-diamonds/" data-wpel-link="internal">H color diamond</a> is a good value option. It’s also one of the more popular choices thanks to its balance in price when compared to the natural diamond color. You’ll notice a significant price jump between each color grade, with H falling somewhere in the middle.
-                    Although H diamonds aren’t completely colorless, they are “near colorless” and only have a very slight yellow tint. Almost no one will notice this difference, especially if the diamond is set in rose or yellow gold.
+                    More and more people are choosing a princess cut over a round brilliant for their engagement rings.
+                    According to Wikipedia’s article on diamond cut, the modern princess cut was first introduced in 1960 by A.
+                    Nagy of London.
                 </p>
-                <h3 class="wp-block-heading">Cushion Diamond Clarity</h3>
+                <img src="~/Image/Introlmage/Princess.jpg" alt="Destination 4" style="width: 50%;margin:auto" />
                 <p>
-                    Regarding <a href="https://www.diamonds.pro/education/clarity/" data-wpel-link="internal">diamond clarity</a>, a cushion cut can be a bit tricky.
-                    Firstly, it’s important to note whether you’re looking to buy a crushed-ice cushion or an “antique” cushion.
-                    The reason is simply that the crushed-ice look, in any shape diamond, is generally a very good hider of inclusions.
-                    Additionally, if you’re looking to buy a marquise or pear shape diamond, it’s always best if the inclusions are in the corners as they’ll be very heavily masked by the crushed-ice that’s typically found in the corners of these shapes.
-                    Of course, you’ll only know what kind of cushion look you’ll be buying if you can see a picture of the diamond in question – so it’s already a given that you’d be able to inspect the diamond’s clarity as well.
-                    Therefore, like always, shoot for the lowest clarity you can find that’s still eye-clean.
+                    The princess cut is universally regarded as the runner-up to the round brilliant in today’s market.
+                    According to the chart from Jogia Diamonds’ blog that we refer to in our article about <a href="https://www.diamonds.pro/education/shapes/" data-wpel-link="internal">diamond shapes</a>, a full 23% of searches on their site are for princess cuts.
                 </p>
-                <img src="~/Image/IntroImage/cushion1.png" alt="Destination 4" style="width: 50%;margin:auto" />
+                <p>
+                    That’s still a far cry from the 64% for round brilliants, but consider that the second runner-up was the emerald cut with only 3% of searches.
+                    The princess cut is squarely in 2nd place.
+                </p>
+                <h2 class="wp-block-heading" id="How-to-Choose-the-Best-Diamond-for-a-Princess-Cut-Engagement-Ring">How to Choose the Best Diamond for a Princess Cut Engagement Ring</h2>
+                <img src="~/Image/Introlmage/Princess1.png" alt="Destination 4" style="width: 30%;margin:auto" />
+                <p>Now that you’re more familiar with the background of the princess cut, let’s get right to the information that’s pertinent to the consumer.</p>
+                <p>To find a truly stunning princess cut diamond ring, it’s important to have an understanding of the <a href="https://www.diamonds.pro/education/4cs-diamonds/" data-wpel-link="internal">4 C’s of diamonds</a> – cut, clarity, color and carat – and how they affect a diamond’s appearance.</p>
+                <p>Prioritizing the right grades in the right areas will help you get the best value for money, as well as ensuring your princess cut diamond ring stands out.</p>
+                <h2 class="wp-block-heading">The Right Price for a Princess Diamond Ring</h2>
+                <p>The price you pay for a princess cut diamond ring will vary greatly depending on the factors outlined above. Most notably, larger carat weights are more expensive. Your choice of color, clarity and cut grade will also influence the price, as will the <a href="https://www.diamonds.pro/education/ring-settings-styles/" data-wpel-link="internal">setting style</a> you choose for your ring.</p>
+                <h2 class="wp-block-heading" id="Best-Setting-for-a-Princess-Diamond-Ring">Best Setting for a Princess Diamond Ring</h2>
+                <p>
+                    The best ring settings for princess diamond rings are the channel and four-prong settings—such as a solitaire or three-stone ring.
+                    With a princess cut’s pointed edges, it’s important to ensure the corners don’t get chipped or damaged.
+                    A channel set or four-prong offers protection without masking the diamond’s beauty.
+                </p>
+                <p>Because princess cuts are quite versatile, there are several stunning setting options. Here’s the full list of the best settings for princess cut diamond rings.</p>
+                <p>
+                    <b>Solitaire</b><br />
+                    A solitaire setting allows the princess cut to take center stage and the maximum light to enter.
+                    This classic solitaire from James Allen is a prime example of a princess cut engagement ring that makes a statement.
+                </p>
+                <img src="~/Image/Introlmage/princess2.jpg" alt="Destination 4" style="width: 50%;margin:auto" />
+                <p>
+                    <b>Channel Set</b><br />
+                    A channel setting offers security to princess cuts. If you are looking for a beautiful choice, this 1/4 carat channel engagement ring from Blue Nile.
+                </p>
+                <img src="~/Image/Introlmage/princess3.jpg" alt="Destination 4" style="width: 50%;margin:auto" />
+
+                <p>
+                    <b>Halo</b><br />
+                    Halo engagement rings feature smaller diamonds that surround the center stone, making it appear even larger. Here is a platinum petite halo ring from James Allen.
+                </p>
+                <img src="~/Image/Introlmage/princess4.jpg" alt="Destination 4" style="width: 50%;margin:auto" />
+                <p>
+                    <b>Vintage </b><br />
+                    Antique style rings have more ornate, unique features, like this regal frame princess cut ring from James Allen.
+                </p>
+                <img src="~/Image/Introlmage/princess5.jpg" alt="Destination 4" style="width: 50%; margin: auto" />
             </div>
         </div>
         <footer>
@@ -362,4 +365,5 @@
     </form>
 </body>
 </html>
+
 
