--- a/ProjectDiamondShop/Views/Introduce/Trillion.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Trillion.cshtml
@@ -234,7 +234,7 @@
         </div>
 
         <div class="spacer"></div>
-        <h2 class="text-center">Cushion Diamond Story</h2>
+        <h2 class="text-center">Trillion Diamond Story</h2>
 
         <div class="container center">
             <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -291,61 +291,76 @@
         <div class="container center ">
             <div class="row ">
                 <p class="decription">
-                    The cushion cut diamond, gaining immense popularity over recent years, characterized by its soft square or rectangular shape with rounded edges, reminiscent of a pillow.
-                    Understanding the nuances between standard and modified cushion cuts, as well as their distinct appearances, is crucial for an informed purchase.
-                    When shopping for a cushion cut diamond, a general guideline is to stick with a depth and table under 70%.
-                    Cushion cuts also retain color more than other shapes, so look for an H color or better when the diamond is set in platinum, white gold, or silver.
-                    A one carat cushion cut costs $2,500 based of our quality recommendation.
-                    We’ll discuss all the nuances of cushion cut diamonds and how to navigate the 4 Cs to find the perfect balance of quality and value.
+                    The Trillion Cut Diamond is triangular shape with rounded or pointed corners and features between 31 to 50 facets.
+                    Originally designed to make the most out of flawed or irregularly-shaped rough diamonds, the Trillion Cut has evolved into a highly sought-after style for those looking to make a unique and modern statement.
+                    The cut makes a dazzling choice for both solitaire settings and as side stones.
+                    When considering a Trillion Cut Diamond, be aware of both its advantages and disadvantages.
+                    On the plus side, the Trillion Cut offers a larger surface area compared to other diamond shapes of the same carat weight, giving you a bigger-looking stone for your money.
+                    The cut also works incredibly well in contemporary and innovative designs.
+                    However, this cut has less brilliance compared to round or princess cuts, and its pointed edges can be prone to chipping if not set correctly.
                 </p>
-                <h1>What is a Cushion Cut Diamond?</h1>
-                <p class="decription">
-                    A cushion cut diamond is a combination of a more modern and round brilliant cut pattern diamond with a classic, old mine facet pattern diamond cut.
-                    This type of diamond typically has a soft square or even rectangular shape, all with curved edges.
-                    Simply put, a cushion cut diamond combines a square cut with rounded corners, giving it an appearance similar to a pillow.
-                    This is where the “cushion cut” name comes from.
-                    Here’s an example of a stunning cushion cut from Blue Nile’s collection.
-                    Cushion cut diamonds are often purchased for engagement rings.
-                    They’re also commonly used in some fashion pieces.
-                    The price of a cushion cut diamond is typically significantly less than the cost of a round brilliant diamond.
-                    However, due to increasing popularity of cushion cut diamond rings, these prices may vary and rise significantly.
-                </p>
-                <img src="~/Image/IntroImage/cushion2.png" alt="Destination 4" style="width: 50%;margin:auto" />
-                <h2 class="wp-block-heading">Key Features of a Cushion Cut Diamond</h2>
-                <p class="decription">
-                    Here are some of the distinctive features that you’ll notice from a cushion cut diamond.
-                </p>
-                <ul class="custom-list">
-                    <li>Square or rectangular shape</li>
-                    <li>Rounded edges</li>
-                    <li>Brilliant cut style (similar to round brilliant and princess cut diamonds)</li>
-                    <li>Vintage, antique look and feel</li>
-                    <li>Numerous style choices (square vs. rectangular, standard vs. modified, “chunky” vs. “crushed ice”)</li>
-                </ul>
-                <img src="~/Image/IntroImage/cushion.png" alt="Destination 4" style="width: 50%;margin:auto" />
-                <h2 class="wp-block-heading" id="Why-Are-Round-Diamond-Engagement-Rings-So-Popular?">How to Choose a Cushion Cut Diamond</h2>
-                <p class="decription">
-                    Looking for a cushion cut? Below, I’ve covered the key factors to look for when buying or comparing cushion cut diamonds, from color to clarity.
-                </p>
-                <h3 class="wp-block-heading">Cushion Diamond Color</h3>
                 <p>
-                    Cushion cuts are one of the worst shapes when it comes to retaining <a href="https://www.diamonds.pro/education/color/" data-wpel-link="internal">diamond color</a>
-                    (or one of the best, if you’re a manufacturer of fancy color diamonds).Cushion cuts are one of the worst shapes when it comes to retaining diamond color (or one of the best, if you’re a manufacturer of fancy color diamonds).
-                    Cushions and radiants are the two most common diamond shapes in the fancy color diamond market. These shapes are on the opposite end of the spectrum from rounds, which are the best at masking their color.
-                    For this reason, I recommend my readers sticking with H or better when buying a cushion cut unless it will be set in yellow or rose gold (in which case, you can go down to J or K).
-                    <a href="https://www.diamonds.pro/education/h-color-diamonds/" data-wpel-link="internal">H color diamond</a> is a good value option. It’s also one of the more popular choices thanks to its balance in price when compared to the natural diamond color. You’ll notice a significant price jump between each color grade, with H falling somewhere in the middle.
-                    Although H diamonds aren’t completely colorless, they are “near colorless” and only have a very slight yellow tint. Almost no one will notice this difference, especially if the diamond is set in rose or yellow gold.
+                    <b>Bottom Line Recommendation:&nbsp;</b>
+                    Trillion cut diamonds are uncommon as the center stone in an engagement ring but can look stunning as diamond accents in a three-stone diamond ring.
+                    Because trillion cut diamonds are typically accent diamonds, there’s less of a need to focus on cut, clarity and color than with a center diamond.
+                    In general, it’s best to look for diamonds that are eye-clean and appear colorless in relation to their setting.
                 </p>
-                <h3 class="wp-block-heading">Cushion Diamond Clarity</h3>
                 <p>
-                    Regarding <a href="https://www.diamonds.pro/education/clarity/" data-wpel-link="internal">diamond clarity</a>, a cushion cut can be a bit tricky.
-                    Firstly, it’s important to note whether you’re looking to buy a crushed-ice cushion or an “antique” cushion.
-                    The reason is simply that the crushed-ice look, in any shape diamond, is generally a very good hider of inclusions.
-                    Additionally, if you’re looking to buy a marquise or pear shape diamond, it’s always best if the inclusions are in the corners as they’ll be very heavily masked by the crushed-ice that’s typically found in the corners of these shapes.
-                    Of course, you’ll only know what kind of cushion look you’ll be buying if you can see a picture of the diamond in question – so it’s already a given that you’d be able to inspect the diamond’s clarity as well.
-                    Therefore, like always, shoot for the lowest clarity you can find that’s still eye-clean.
+                    As always, we recommend buying trillion cut diamond jewelry from a reputable vendor.
+                    <a href="https://www.jamesallen.com/?a_aid=dmnd1357&amp;data1=413785" data-wpel-link="advanced" target="_blank" rel="nofollow noopener external sponsored" title="" class="external-link">James Allen</a> and <a href="https://www.leibish.com/#a_aid=y" data-wpel-link="advanced" target="_blank" rel="nofollow noopener external sponsored" title="" class="external-link">Leibish &amp; Co.</a> both stock a reasonable range of engagement ring settings with trillion cut diamonds, all with excellent images and very competitive pricing.
                 </p>
-                <img src="~/Image/IntroImage/cushion1.png" alt="Destination 4" style="width: 50%;margin:auto" />
+                <h2 class="wp-block-heading" id="h-what-is-a-trillion-cut-diamond">What is a Trillion Cut Diamond?</h2>
+                <p>
+                    A trillion cut diamond, also referred to as a trilliant cut, is a diamond that’s cut into a triangular shape.
+                    A typical trillion cut diamond will have three sides of equal length, with a flat table at its surface.&nbsp;
+                </p>
+                <p>The trillion cut is a relatively contemporary diamond shape, with its modern history dating back to the 1960s. <a href="https://www.gia.edu/gia-museum-exhibit-trilliant-gems" target="_blank" rel="noreferrer noopener external" data-wpel-link="external">Described by the GIA</a> as an “adventurous and provocative cut,” it has an eye-catching, contemporary look that certainly stands out from the crowd.&nbsp;</p>
+                <p>Unlike most diamond shapes, the trillion cut is more commonly used for side-stone diamonds than for center stones. For example, <a href="https://rapaport.com/news/18ct-diamond-smashes-estimate-at-bonhams/" target="_blank" rel="noreferrer noopener external" data-wpel-link="external">this incredible 18.04 carat diamond ring sold by Bonhams</a> featured trillion cut diamond accents, further enhancing the beauty of the center diamond.</p>
+                <p>
+                    However, although trillion cut diamonds are popular as side stones, you can also find engagement rings that feature a trillion cut diamond as the center stone.
+                    Below, we’ve gone into more detail on the shape and appearance of the trillion cut, as well as the history of this diamond shape.
+                    We’ve also shared our recommendations for purchasing an engagement ring with trillion cut diamond accents.
+                </p>
+                <h2 class="wp-block-heading" id="h-trillion-cut-diamond-the-basics">Trillion Cut Diamond: The Basics</h2>
+
+                <p class="decription">
+                    <img src="~/Image/Introlmage/Trillion.png" alt="Destination 4" style="width: 50%;margin-left:260px;" />
+                </p>
+                <<p>
+                    The trillion cut diamond is triangular, with three equal sides. Like the round brilliant cut, a trillion cut diamond has a flat table.
+                    The trillion cut is known for having impressive brilliance, great fire and an eye-catching, modern appearance.&nbsp;
+                </p>
+                <p>
+                    Like other diamonds derived from the brilliant, trillion cut diamonds do a good job of hiding color and inclusions.
+                    When cut to a high standard, a trillion cut diamond can look absolutely stunning, either as a center stone or as an accent diamond.&nbsp;
+                </p>
+                <p>Trillion cut diamonds can differ in cut and shape depending on whether they’re intended for use as center or accent stones.</p>
+                <p>
+                    When a trillion cut diamond is intended to be used as a center diamond in a solitaire ring, it will typically be cut to have 50 facets.
+                    Center trillion diamonds will also usually have a light curve or convex shape to maximize the diamond’s perceived size.
+                </p>
+                <p>When a trillion cut diamond is intended to be used as an accent diamond — for example, as a side accent in a <a href="https://www.leibish.com/rings-jewelry/double-halo-ring-setting-with-yellow-diamonds-triangles-27292#a_aid=y" data-wpel-link="advanced" target="_blank" rel="nofollow noopener external sponsored" title="" class="external-link">three-stone engagement ring</a> — it will typically be cut with 31 facets and won’t have convex edges.&nbsp;</p>
+                <p>
+                    Thanks to its long sides, a trillion cut diamond can often appear to be larger than its true carat weight.
+                    The trillion cut, as we know it today, was trademarked by the Henry Meyer Diamond Company of New York in the 1960s as the “trilliant” cut. However, early trillion cut diamonds are believed to have been cut in Amsterdam as long ago as the 19th century.
+                </p>
+                <img src="~/Image/Introlmage/trillion1.png" alt="Destination 4" style="width: 40%;margin:auto;" />
+                <p>
+                    The trilliant name comes from the diamond’s shape — a combination of the words “triangle” and “brilliant.”
+                    Over the years, numerous variations of the trillion cut have been produced, often with different shapes and facet counts.
+                    Because of the variation in cut between different trillion cut diamonds, it’s important to pay close attention to photos when you’re comparing diamonds in this cut.
+                </p>
+                <h2 class="wp-block-heading" id="h-trillion-cut-diamonds-price">Trillion Cut Diamonds: Price</h2>
+                <p>
+                    Like other diamond shapes, trillion cut diamonds can vary hugely in price based on their color, clarity, cut quality and carat weight.
+                    Diamond prices increase exponentially with size, meaning you’ll pay significantly more per carat if you’re looking for a particularly large diamond.
+                    Since most trillion cut diamonds are part of a setting, the price can vary based on the type of setting, the number of diamonds and the total carat weight.
+                </p>
+                <h2 class="wp-block-heading" id="h-are-trillion-cut-diamonds-rare">Are Trillion Cut Diamonds Rare?</h2>
+                <p>
+                    Trillion cut diamonds are quite rare, especially as center stones.
+                    Few jewelry stores keep trillion cut diamonds in stock, with the notable exception of trillion cut diamonds used as accent stones in three-stone engagement rings.
+                </p>
             </div>
         </div>
         <footer>
@@ -362,4 +377,5 @@
     </form>
 </body>
 </html>
+
 
