--- a/ProjectDiamondShop/Views/Home/About.cshtml
+++ b/ProjectDiamondShop/Views/Home/About.cshtml
@@ -210,7 +210,7 @@
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav navbar-right">
-                            <li ><a href="@Url.Action("Index", "Home")">Home</a> </li>
+                            <li><a href="@Url.Action("Index", "Home")">Home</a> </li>
                             <li class="active"><a href="@Url.Action("About", "Home")">About</a> </li>
                             <li><a href="@Url.Action("Contact", "Home")">Contact US</a> </li>
                             <li><a href="#">Blog</a> </li>
@@ -220,7 +220,7 @@
                                 }
                                 else
                                 {
-                                    <li><a href="SignUp.aspx">Sign Up</a> </li>
+                                    <li><a href="@Url.Action("Index", "SignUp")">Sign Up</a> </li>
                                     <li><a href="#">Login</a> </li>
                                 }
                             }
