--- a/ProjectDiamondShop/Views/Introduce/Heart.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Heart.cshtml
@@ -184,6 +184,10 @@
             list-style-type: disc;
             margin-left: 20px;
         }
+
+        .container center img {
+            text-align: justify;
+        }
     </style>
 </head>
 
@@ -228,8 +232,9 @@
                     </div>
                 </div>
             </div>
+
             <div class="spacer"></div>
-            <h2 class="text-center">H Diamond Story</h2>
+            <h2 class="text-center">Heart Diamond Story</h2>
 
             <div class="container center">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
