--- a/ProjectDiamondShop/Views/Introduce/Radiant.cshtml
+++ b/ProjectDiamondShop/Views/Introduce/Radiant.cshtml
@@ -183,6 +183,10 @@
             list-style-type: disc;
             margin-left: 20px;
         }
+
+        .container center img {
+            text-align: justify;
+        }
     </style>
 </head>
 
@@ -227,6 +231,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="spacer"></div>
             <h2 class="text-center">Radiant Diamond Story</h2>
 
